# kursach

./: CMakeLists.txt  README.md  config.h  dir.hpp  input.hpp  levenshtein_distance.hpp  main.cpp  output.hpp  printing.hpp  remove_comments.hpp  text_overlap.hpp
include/: config.h  difference.h  dir.hpp  input.hpp  input_exceptions.hpp  levenshtein_distance.hpp  output.hpp  remove_comments.hpp  text_overlap.hpp
src/: dir.cpp  input.cpp  output.cpp  remove_comments.cpp  text_overlap.cpp
